# py-tree-sitter-spthy

./: LICENSE  MANIFEST.in  README.md  py-tree-sitter-spthy.nix  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml  test.yml
grammars/tamarin-prover/etc/: notepad_plus_plus_spthy.xml
grammars/tamarin-prover/examples/asiaccs20-eccDAA/: README.md
grammars/tamarin-prover/examples/features/auto-sources/spore/: AS_Concrete_RPC.spthy  AS_Modified_RPC.spthy  AS_RPC.spthy  Lowe_AS_Concrete_RPC.spthy
grammars/tamarin-prover/examples/sapic/fast/feature-secret-channel/: U2F.spthy
grammars/tree-sitter-spthy/: pyproject.toml
tests/: SimpleChallengeResponse.spthy  test_deprecation_fix.py  test_lemma_parser.py  test_wheel.py
