[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-tree-sitter-spthy"
description = "Tree-sitter parser for Spthy language (Tamarin Prover)"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [{ name = "Luca Mandrelli", email = "luca.mandrelli@icloud.com" }]
keywords = [
    "tree-sitter",
    "parser",
    "spthy",
    "tamarin",
    "protocol",
    "verification",
    "security",
    "formal-methods",
    "syntax-tree",
    "parsing",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dependencies = ["tree-sitter>=0.20.0"]
version = "1.2.2"

[project.optional-dependencies]
dev = ["pytest>=6.0", "black>=22.0", "flake8>=4.0"]

[project.urls]
Homepage = "https://github.com/lmandrelli/py-tree-sitter-spthy"
Repository = "https://github.com/lmandrelli/py-tree-sitter-spthy"
Issues = "https://github.com/lmandrelli/py-tree-sitter-spthy/issues"
"Bug Tracker" = "https://github.com/lmandrelli/py-tree-sitter-spthy/issues"
Documentation = "https://github.com/lmandrelli/py-tree-sitter-spthy/blob/main/README.md"
"Source Code" = "https://github.com/lmandrelli/py-tree-sitter-spthy"

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312', 'py313', 'py314']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "*-win32 *-manylinux_i686"
before-build = "python -m pip install --upgrade pip setuptools wheel"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["py_tree_sitter_spthy*", "tree_sitter_spthy*"]

[tool.setuptools.package-data]
"py_tree_sitter_spthy" = ["py.typed", "*.pyi"]
"tree_sitter_spthy" = ["*.c", "py.typed", "*.pyi"]
